# runtastic2strava

./: .gitignore  README.rst  get-token.py  requirements.txt  runtastic2strava.py  settings-sample.json  setup.cfg  tox.ini
