[metadata]
name = runtastic2strava
version = 1
summary = Send Runtastic activities to Strava
author = Julien Danjou
author-email = julien@danjou.info
home-page = https://github.com/jd/runtastic2strava
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
scripts = runtastic2strava.py

[pbr]
warnerrors = true
